# bank_mask_project

./: .coverage  .flake8  .gitignore  README.md  main.py  pyproject.toml  pytest.ini
HTML_Tests/: class_index.html  function_index.html  index.html  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_decorators_py.html  z_145eef247bfb46b6_generators_py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_widget_py.html  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_test_decorators_py.html  z_a44f0ac069e85531_test_generators_py.html  z_a44f0ac069e85531_test_masks_py.html  z_a44f0ac069e85531_test_processing_py.html  z_a44f0ac069e85531_test_widget_py.html
Test_result/: test_results.xml
src/: __init__.py  decorators.py  generators.py  masks.py  processing.py  widget.py
tests/: .coverage  test_decorators.py  test_generators.py  test_masks.py  test_processing.py  test_widget.py
