[tool.poetry]
name = "project-bank-masks"
version = "0.1.0"
description = ""
authors = ["Dmitriy <mecheny91@yandex.ru>"]
packages = [{ include = "src", from = "." }]

[tool.poetry.dependencies]
python = "^3.13"
flake8 = "^7.2.0"
isort = "^6.0.1"
black = "^25.1.0"
mypy = "^1.16.0"

[tool.poetry.group.lint.dependencies]
flake8 = "7.2.0"
black = ">=24.0.0,<25.3.0"
isort = "6.0.1"
mypy = "1.16.0"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = '''
.git
'''

[tool.isort]
line_length = 119
known_first_party = ["src"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = "venv"
